fixed minor style issues in comments

--- a/rainfall_prediction_with_random_forest/rainfall-prediction-with-random-forest-cpp.ipynb
+++ b/rainfall_prediction_with_random_forest/rainfall-prediction-with-random-forest-cpp.ipynb
@@ -329,7 +329,7 @@
     }
    ],
    "source": [
-    "// Inspect the first 5 examples in the dataset\n",
+    "// Inspect the first 5 examples in the dataset.\n",
     "std::cout.precision(4);\n",
     "std::cout.setf(std::ios::fixed);\n",
     "std::cout << std::setw(15) << \"Location\" << std::setw(10) << \"MinTemp\" << std::setw(13) << \"MaxTemp\" \n",
@@ -379,7 +379,7 @@
    "id": "dc48e327-fa21-4623-9e87-89e50d2b6e77",
    "metadata": {},
    "source": [
-    "From the above visualization, we can observe that the presence of \"No\" and \"Yes\" are in ratio 78:22, so there is a huge class imbalance. For the first part we would not be handling the class imbalance. In order to see how our model performs on the raw imbalanced data"
+    "From the above visualization, we can observe that the presence of \"No\" and \"Yes\" are in ratio 78:22, so there is a huge class imbalance. For the first part we would not be handling the class imbalance. In order to see how our model performs on the raw imbalanced data."
    ]
   },
   {
@@ -520,14 +520,14 @@
    "metadata": {},
    "source": [
     "As we can observe from the above heatmap, there is high correlation between the following features:\n",
-    "* MinTemp & MaxTemp\n",
-    "* MinTemp & Temp9am\n",
-    "* MinTemp & Temp3pm\n",
-    "* MaxTemp & Temp9am\n",
-    "* MaxTemp & Temp3pm\n",
-    "* Temp3pm & Temp9am\n",
-    "* Pressure9am & Pressure3pm\n",
-    "* Evaporation & MaxTemp"
+    "* MinTemp & MaxTemp.\n",
+    "* MinTemp & Temp9am.\n",
+    "* MinTemp & Temp3pm.\n",
+    "* MaxTemp & Temp9am.\n",
+    "* MaxTemp & Temp3pm.\n",
+    "* Temp3pm & Temp9am.\n",
+    "* Pressure9am & Pressure3pm.\n",
+    "* Evaporation & MaxTemp."
    ]
   },
   {
@@ -836,7 +836,7 @@
    "id": "d5cf20e9-0611-4e39-8e80-6d0cce528272",
    "metadata": {},
    "source": [
-    "For this part we would be handling the class imbalance. In order to see how our model performs on the randomly oversampled data. We will be using `Resample()` method to oversample the minority class i.e \"Yes, signifying it will rain tomorrow\""
+    "For this part we would be handling the class imbalance. In order to see how our model performs on the randomly oversampled data. We will be using `Resample()` method to oversample the minority class i.e \"Yes, signifying it will rain tomorrow\"."
    ]
   },
   {
@@ -1230,7 +1230,7 @@
    "id": "d3153164-f3db-4b26-9ea8-1ef9363e4c77",
    "metadata": {},
    "source": [
-    "For this part we would be handling the class imbalance. In order to see how our model performs on the oversampled data using SMOTE. We will be using `SMOTE` API from imblearn to oversample the minority class i.e \"Yes, signifying it will rain tomorrow\""
+    "For this part we would be handling the class imbalance. In order to see how our model performs on the oversampled data using SMOTE. We will be using `SMOTE` API from imblearn to oversample the minority class i.e \"Yes, signifying it will rain tomorrow\"."
    ]
   },
   {
@@ -1238,7 +1238,7 @@
    "id": "1fb71395-13a8-4f9a-a0f6-5a0674af1396",
    "metadata": {},
    "source": [
-    "Unlike our `Resample` method, we need to handle missing and categorical data before applying `SMOTE` "
+    "Unlike our `Resample` method, we need to handle missing and categorical data before applying `SMOTE`."
    ]
   },
   {
