fixed minor style issues in py notebook

--- a/rainfall_prediction_with_random_forest/rainfall-prediction-with-random-forest-py.ipynb
+++ b/rainfall_prediction_with_random_forest/rainfall-prediction-with-random-forest-py.ipynb
@@ -558,7 +558,7 @@
    "id": "90aaad19-bd99-401f-a041-d927095164cf",
    "metadata": {},
    "source": [
-    "We observe that atmost some features have 50% missing values. So instead of discarding them, we will impute them with proper imputation method"
+    "We observe that atmost some features have 50% missing values. So instead of discarding them, we will impute them with proper imputation method."
    ]
   },
   {
@@ -600,7 +600,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# impute the data using mean imputation strategy.\n",
+    "# Impute the data using mean imputation strategy.\n",
     "weatherImp = Imputer(weatherData)"
    ]
   },
@@ -1284,7 +1284,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# oversample the minority class.\n",
+    "# Oversample the minority class.\n",
     "negClass = weatherData[weatherData.RainTomorrow == \"No\"]\n",
     "posClass = weatherData[weatherData.RainTomorrow == \"Yes\"]\n",
     "posOverSampled = Resample(posClass, replace=True, n_samples=len(negClass))\n",
@@ -1309,7 +1309,7 @@
     }
    ],
    "source": [
-    "# visualize the oversampled data distribution.\n",
+    "# Visualize the oversampled data distribution.\n",
     "ax = sns.countplot(x=\"RainTomorrow\", data=overSampled)\n",
     "ax.set_title(\"Oversampled Population\")\n",
     "plt.show()"
@@ -1414,7 +1414,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# impute the data using mean imputation strategy.\n",
+    "# Impute the data using mean imputation strategy.\n",
     "overSampledImp = Imputer(overSampled)"
    ]
   },
@@ -1502,14 +1502,14 @@
    "metadata": {},
    "source": [
     "As we can observe from the above heatmap, there is high correlation between the following features:\n",
-    "* MinTenp & MaxTemp\n",
-    "* MinTemp & Temp9am\n",
-    "* MinTemp & Temp3pm\n",
-    "* MaxTemp & Temp9am\n",
-    "* MaxTemp & Temp3pm\n",
-    "* Temp3pm & Temp9am\n",
-    "* Pressure9am and Pressure3pm\n",
-    "* Evaporation & MaxTemp"
+    "* MinTenp & MaxTemp.\n",
+    "* MinTemp & Temp9am.\n",
+    "* MinTemp & Temp3pm.\n",
+    "* MaxTemp & Temp9am.\n",
+    "* MaxTemp & Temp3pm.\n",
+    "* Temp3pm & Temp9am.\n",
+    "* Pressure9am and Pressure3pm.\n",
+    "* Evaporation & MaxTemp."
    ]
   },
   {
@@ -1669,7 +1669,7 @@
    "id": "827e44aa-1a8e-491f-a3d3-9df07f367fa5",
    "metadata": {},
    "source": [
-    "For this part we would be handling the class imbalance. In order to see how our model performs on the oversampled data using SMOTE. We will be using `SMOTE` API from imblearn to oversample the minority class i.e \"Yes, signifying it will rain tomorrow\""
+    "For this part we would be handling the class imbalance. In order to see how our model performs on the oversampled data using SMOTE. We will be using `SMOTE` API from imblearn to oversample the minority class i.e \"Yes, signifying it will rain tomorrow\"."
    ]
   },
   {
@@ -1687,7 +1687,7 @@
    "id": "7da464fe-b91b-47fe-91dc-cf38ea96d991",
    "metadata": {},
    "source": [
-    "Unlike our `Resample` method, we need to handle missing and categorical data before applying `SMOTE` "
+    "Unlike our `Resample` method, we need to handle missing and categorical data before applying `SMOTE`."
    ]
   },
   {
@@ -1750,7 +1750,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# impute the data using mean imputation strategy.\n",
+    "# Impute the data using mean imputation strategy.\n",
     "smoteImp = Imputer(smoteData)"
    ]
   },
@@ -1838,14 +1838,14 @@
    "metadata": {},
    "source": [
     "As we can observe from the above heatmap, there is high correlation between the following features:\n",
-    "* MinTenp & MaxTemp\n",
-    "* MinTemp & Temp9am\n",
-    "* MinTemp & Temp3pm\n",
-    "* MaxTemp & Temp9am\n",
-    "* MaxTemp & Temp3pm\n",
-    "* Temp3pm & Temp9am\n",
-    "* Pressure9am and Pressure3pm\n",
-    "* Evaporation & MaxTemp"
+    "* MinTenp & MaxTemp.\n",
+    "* MinTemp & Temp9am.\n",
+    "* MinTemp & Temp3pm.\n",
+    "* MaxTemp & Temp9am.\n",
+    "* MaxTemp & Temp3pm.\n",
+    "* Temp3pm & Temp9am.\n",
+    "* Pressure9am and Pressure3pm.\n",
+    "* Evaporation & MaxTemp."
    ]
   },
   {
@@ -2070,7 +2070,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# undersample the majority class.\n",
+    "# Undersample the majority class.\n",
     "negClass = weatherData[weatherData.RainTomorrow == \"No\"]\n",
     "posClass = weatherData[weatherData.RainTomorrow == \"Yes\"]\n",
     "negUnderSampled = Resample(negClass, replace=False, n_samples=len(posClass))\n",
@@ -2200,7 +2200,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# impute the data using mean imputation strategy.\n",
+    "# Impute the data using mean imputation strategy.\n",
     "underSampledImp = Imputer(underSampled)"
    ]
   },
@@ -2288,14 +2288,14 @@
    "metadata": {},
    "source": [
     "As we can observe from the above heatmap, there is high correlation between the following features:\n",
-    "* MinTenp & MaxTemp\n",
-    "* MinTemp & Temp9am\n",
-    "* MinTemp & Temp3pm\n",
-    "* MaxTemp & Temp9am\n",
-    "* MaxTemp & Temp3pm\n",
-    "* Temp3pm & Temp9am\n",
-    "* Pressure9am and Pressure3pm\n",
-    "* Evaporation & MaxTemp"
+    "* MinTenp & MaxTemp.\n",
+    "* MinTemp & Temp9am.\n",
+    "* MinTemp & Temp3pm.\n",
+    "* MaxTemp & Temp9am.\n",
+    "* MaxTemp & Temp3pm.\n",
+    "* Temp3pm & Temp9am.\n",
+    "* Pressure9am and Pressure3pm.\n",
+    "* Evaporation & MaxTemp."
    ]
   },
   {
