added remote dataset source to c++ notebook

--- a/loan_default_prediction_with_decision_tree/loan-default-prediction-with-decision-tree-cpp.ipynb
+++ b/loan_default_prediction_with_decision_tree/loan-default-prediction-with-decision-tree-cpp.ipynb
@@ -30,6 +30,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "feebbb7c-63a5-48f2-a315-cfdf45d42450",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!wget -q http://datasets.mlpack.org/LoanDefault.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "95cb1c6e-7e25-41d2-bc44-8f01dbf56593",
    "metadata": {},
@@ -828,6 +838,14 @@
    "source": [
     "// Oversample the minority class using SMOTE resampling strategy.\n",
     "Resample(\"LoanDefault.csv\", \"Defaulted?\", 0, 1, \"smote\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db42d985-524d-428e-bc4e-ed7e04b6aa42",
+   "metadata": {},
+   "source": [
+    "We need to put back the headers manually into the newely sampled dataset for visualization purpose."
    ]
   },
   {
