added description & objective to cpp notebook

--- a/graduate_admission_classification_with_Adaboost/graduate-admission-classification-with-adaboost-cpp.ipynb
+++ b/graduate_admission_classification_with_Adaboost/graduate-admission-classification-with-adaboost-cpp.ipynb
@@ -1,6 +1,45 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "79cfd318-350f-4f2b-b985-0f97ab8a119b",
+   "metadata": {},
+   "source": [
+    "### Prediction of Chances of Admit for Graduate Programs in US Universities\n",
+    "\n",
+    "### Our Objective:\n",
+    "* Determine the most important factors that contribute to a student's chance of admission, and select the most accurate model to predict the probability of admission.\n",
+    "* The predicted output gives them a fair idea about their admission chances in a particular university. \n",
+    "\n",
+    "### Getting to know the dataset!\n",
+    "GA dataset contains various paraameters which are important for admission into graduate programs in universities. The features included are :\n",
+    "* GRE Scores ( out of 340 ).\n",
+    "* TOEFL Scores ( out of 120 ).\n",
+    "* University Rating ( out of 5 ).\n",
+    "* Statement of Purpose and Letter of Recommendation Strength ( out of 5 ).\n",
+    "* Undergraduate GPA ( out of 10 ).\n",
+    "* Research Experience ( either 0 or 1 ).\n",
+    "* Chance of Admit ( ranging from 0 to 1 ).\n",
+    "\n",
+    "### Approach\n",
+    "* Explore our data to check for imbalance and missing values.\n",
+    "* Explore the correlation between various features in the dataset.\n",
+    "* Split the preprocessed dataset into train and test sets respectively.\n",
+    "* Create and Train a AdaBoost Classifier using mlpack.\n",
+    "* We'll perform evaluation on our test set using metrics such as Accuracy, ROC AUC to quantify the performance of out model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a06d8f1-23a7-44ef-80b1-0394a660e8d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!wget -q http://datasets.mlpack.org/Admission_Predict.csv"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "d9826954-4773-44d2-ac20-456ed54724d2",
