fixed minor styling issues & markdown

--- a/graduate_admission_classification_with_Adaboost/graduate-admission-classification-with-adaboost-py.ipynb
+++ b/graduate_admission_classification_with_Adaboost/graduate-admission-classification-with-adaboost-py.ipynb
@@ -654,6 +654,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2746adac-6ffb-4a34-b520-bc5d5089917e",
+   "metadata": {},
+   "source": [
+    "* Higher the GRE score, higher the chance of getting admit.\n",
+    "* From the above plot it is clear that most students tend to score above 310 in GRE. Maximum GRE scores are in range 320-340."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 144,
    "id": "5539f73d-16ef-4e8b-8238-186bad59b8a1",
@@ -691,7 +700,7 @@
    "id": "b21cd27c-2359-4498-9131-6b5f30cb8f00",
    "metadata": {},
    "source": [
-    "From the above plot it is clear that mist students tend to score above 310 in GRE. Maximum GRE scores are in range 320-340"
+    "* High TOEFL score has a greater chance of getting admit."
    ]
   },
   {
@@ -721,7 +730,7 @@
    "id": "7ff18396-c1cb-41dd-9900-4be9bf5b111d",
    "metadata": {},
    "source": [
-    "* Students from universitites rated '5' have a average of whopping 88.8% chances of admit whilst students from '1' rated universities have not a great value of 56.2 % chances"
+    "* Students from universitites rated 5 have a average of whopping 88.8% chances of admit whilst students from 1 rated universities have not a great value of 56.2 % chances."
    ]
   },
   {
@@ -758,6 +767,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f8a05a64-5eb7-4df8-a820-f7993cf90c84",
+   "metadata": {},
+   "source": [
+    "* Students who have secured higher score for their Statement of Purpose (SOP), have an upper hand in getting an admit. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 148,
    "id": "4ac0aea9-3681-4562-a944-9a5b3333a95d",
@@ -791,6 +808,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ff0a57ae-b311-4d35-98cb-1718455490b2",
+   "metadata": {},
+   "source": [
+    "* Students who have secured higher score for their Letter of Recommendation (LOR), have an upper hand in getting an admit."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 149,
    "id": "c2eebda8-0c86-4a24-82be-eff67a5da72b",
@@ -819,7 +844,7 @@
    "id": "f099d375-09d8-4478-ae5b-393cf72d9d75",
    "metadata": {},
    "source": [
-    "From the above plot it is clear that most students tend to score above 100 in TOEFL."
+    "* Students with high CGPA are likely to get more chance of admit than those who scored low CGPA."
    ]
   },
   {
@@ -1035,7 +1060,6 @@
    "metadata": {},
    "source": [
     "### Train Test Split\n",
-    "\n",
     "The dataset has to be split into training and test set. Here the dataset has 400 observations and the test ratio is taken as 25% of the total observations. This indicates that the test set should have 25% * 400 = 100 observations and training set should have 300 observations respectively."
    ]
   },
