fixed some minor errors

--- a/microchip_quality_control_naive_bayes/microchip-quality-control-naive-bayes-py.ipynb
+++ b/microchip_quality_control_naive_bayes/microchip-quality-control-naive-bayes-py.ipynb
@@ -59,7 +59,7 @@
    "outputs": [],
    "source": [
     "# Read-in MCQA dataset using pandas.\n",
-    "microChipData = pd.read_csv(\"microChip.csv\")"
+    "microChipData = pd.read_csv(\"http://datasets.mlpack.org/microChip.csv\")"
    ]
   },
   {
@@ -244,7 +244,7 @@
     }
    ],
    "source": [
-    "# Plot the correlation between features as heatmap.\n",
+    "# Plot the correlation between features as a heatmap.\n",
     "PlotHeatMap(microChipData)"
    ]
   },
@@ -253,7 +253,7 @@
    "id": "d1f39e43-9ebe-42f5-ba5b-48351ea7168f",
    "metadata": {},
    "source": [
-    "As we can infer from the above hatemap, there is some correlation between Test_1, Test_2 & QA_Passed."
+    "As we can infer from the above heatmap, there is some correlation between Test_1, Test_2 & QA_Passed."
    ]
   },
   {
@@ -441,7 +441,12 @@
    "id": "451effc7-8b8a-4c1d-bf12-db99e589f370",
    "metadata": {},
    "source": [
-    "### Training the Naive Bayes Classifier"
+    "### Training the Naive Bayes Classifier\n",
+    "Naive Bayes is a machine learning algorithm we use to solve classification problems. It is based on the Bayes Theorem. It is one of the simplest yet powerful ML algorithms and assumes that all predictors are independent.\n",
+    "* It assumes that every feature is independent.\n",
+    "* It gives every feature the same level of importance.\n",
+    "\n",
+    "$ P(Y|X) = \\frac{P(X|Y)P(Y)}{P(X)} $"
    ]
   },
   {
@@ -526,7 +531,7 @@
    "source": [
     "def PlotRocAUC(fper, tper):\n",
     "    \"\"\"\n",
-    "    Generates an ROC AUC curve for the give True Positive Rate and False Positive Rate.\n",
+    "    Generates a ROC AUC curve for the give True Positive Rate and False Positive Rate.\n",
     "    \n",
     "            Parameter:\n",
     "                fper (np.ndarray): Contains the false positive rate.\n",
@@ -605,7 +610,7 @@
    "metadata": {},
    "source": [
     "### Conclusion\n",
-    "From the above classification report & ROC AUC, we can infer that our Naive Bayes Classifier model kinda performs well on our micro chip QA. Feel free to play around with h-params, split ratio etc."
+    "From the above classification report & a ROC AUC, we can infer that our Naive Bayes Classifier model kinda performs well on our micro chip QA. Feel free to play around with h-params, split ratio etc."
    ]
   }
  ],
