added plot for categorical data

--- a/microchip_quality_control_naive_bayes/microchip-quality-control-naive-bayes-cpp.ipynb
+++ b/microchip_quality_control_naive_bayes/microchip-quality-control-naive-bayes-cpp.ipynb
@@ -26,6 +26,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "371d41b4-0d7f-46ce-9d2b-4104b868f82e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!wget -q http://datasets.mlpack.org/microChip.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "396dd5f0-9218-4512-931e-a7553472612c",
    "metadata": {},
@@ -230,12 +240,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "be14e12d732043289cdad360f67d7110",
+       "model_id": "5805baabceaf495cb75a58ee15a42ff4",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: be14e12d732043289cdad360f67d7110"
+       "A Jupyter widget with unique id: 5805baabceaf495cb75a58ee15a42ff4"
       ]
      },
      "execution_count": 14,
@@ -244,7 +254,7 @@
     }
    ],
    "source": [
-    "// Plot the correlation matrix as heatmap.\n",
+    "// Plot the correlation matrix as a heatmap.\n",
     "HeatMapPlot(\"microChip.csv\", \"coolwarm\", \"Micro Chip Correlation Heatmap\", 1, 5, 5);\n",
     "auto img = xw::image_from_file(\"./plots/Micro Chip Correlation Heatmap.png\").finalize();\n",
     "img"
@@ -255,7 +265,7 @@
    "id": "750b0a5e-43f3-486b-a1d5-03b47c616f6d",
    "metadata": {},
    "source": [
-    "As we can infer from the above hatemap, there is some correlation between Test_1, Test_2 & QA_Passed."
+    "As we can infer from the above heatmap, there is some correlation between Test_1, Test_2 & QA_Passed."
    ]
   },
   {
@@ -275,12 +285,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f5892c59842d43b29e9c94fc36125174",
+       "model_id": "2c39fe7cc0444a02a02fc5a1c43fa72d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: f5892c59842d43b29e9c94fc36125174"
+       "A Jupyter widget with unique id: 2c39fe7cc0444a02a02fc5a1c43fa72d"
       ]
      },
      "execution_count": 15,
@@ -297,6 +307,34 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "55707dec-ff69-4635-b27f-5c0adaf5e113",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "70a0027ff76945a8bf56b1cd03765d1b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "A Jupyter widget with unique id: 70a0027ff76945a8bf56b1cd03765d1b"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "PlotCatData(\"microChip.csv\", 2, \"Microchip Test 1\", \"Mircochip Test 2\", \"MCQA\");\n",
+    "auto img = xw::image_from_file(\"./plots/MCQA.png\").finalize();\n",
+    "img"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "befe4a01-493c-4ac6-aa0e-c069e77ad77d",
    "metadata": {},
    "outputs": [],
@@ -318,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "e607095f-c08e-4a35-a723-9ae154eb9aa2",
    "metadata": {},
    "outputs": [],
@@ -334,12 +372,17 @@
    "id": "9ce25737-cc50-400b-acac-165fbbdd0bf1",
    "metadata": {},
    "source": [
-    "### Training the Naive Bayes Classifier"
+    "### Training the Naive Bayes Classifier\n",
+    "Naive Bayes is a machine learning algorithm we use to solve classification problems. It is based on the Bayes Theorem. It is one of the simplest yet powerful ML algorithms and assumes that all predictors are independent.\n",
+    "* It assumes that every feature is independent.\n",
+    "* It gives every feature the same level of importance.\n",
+    "\n",
+    "$ P(Y|X) = \\frac{P(X|Y)P(Y)}{P(X)} $"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "e90cf3c3-89c5-4fe5-af9c-90f4f6846ef3",
    "metadata": {},
    "outputs": [],
@@ -357,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "709f7d14-b7d0-4546-9c89-c3102fa7507a",
    "metadata": {},
    "outputs": [],
@@ -370,12 +413,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "ba358857-5af9-4b47-8365-61dc306d3602",
    "metadata": {},
    "outputs": [],
    "source": [
-    "// Save predicted probabilities and ground truth as csv for generating ROC AUC curve.\n",
+    "// Save predicted probabilities and ground truth as csv for generating a ROC AUC curve.\n",
     "data::Save(\"./data/probabilities.csv\", probs);\n",
     "data::Save(\"./data/ytest.csv\", Ytest);"
    ]
@@ -414,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "25ccf748-9035-46b6-a520-f23e3a376b66",
    "metadata": {},
    "outputs": [
@@ -438,22 +481,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "id": "3de43f41-b09d-4d5d-80d0-58bf1bc69569",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "41d1ddb731c74e80acd844e78b072111",
+       "model_id": "1ac4fbc468684d5091ba60bb16ed1c23",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: 41d1ddb731c74e80acd844e78b072111"
+       "A Jupyter widget with unique id: 1ac4fbc468684d5091ba60bb16ed1c23"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
