updated plotting API & executed the entire nb

--- a/avocado_price_prediction_with_linear_regression/avocado_price_prediction_with_lr_cpp.ipynb
+++ b/avocado_price_prediction_with_linear_regression/avocado_price_prediction_with_lr_cpp.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ac3caf12-b4f2-4dc3-bf7a-0e855d6f245e",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "1bbdb43e-e14e-4c36-aa1e-3312739b9858",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "3d374b30-e54a-4990-b191-aade8144d0a6",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "aaa7fa57-80c6-48aa-9d9d-5816c947b74b",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "324c030a-d1ec-41c6-b6ad-92d62c9fbf57",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "ce45d9ac-b131-462c-8f2e-e019a0f5f303",
    "metadata": {},
    "outputs": [],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "6d45544e-9f6d-4fab-93b2-ded5b51aa9dd",
    "metadata": {},
    "outputs": [],
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "9d79dabe-286d-4278-9d41-d06a4048b7b0",
    "metadata": {},
    "outputs": [],
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "4211bf8b-0b98-4edf-9ae2-6159a7ed5bd3",
    "metadata": {},
    "outputs": [],
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "ae1a3152-76bc-43ce-894b-6554a2f0ad8a",
    "metadata": {},
    "outputs": [],
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "7619f5f1-7e33-4257-9868-999593810d96",
    "metadata": {},
    "outputs": [
@@ -233,22 +233,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "9c2b6725-f2ea-4e1b-ae0e-2fbc2cf71833",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "22832c544af643838309b8069fe427d6",
+       "model_id": "9e1b02586a0c44ffae8faaa5d6f58cad",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: 22832c544af643838309b8069fe427d6"
+       "A Jupyter widget with unique id: 9e1b02586a0c44ffae8faaa5d6f58cad"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,22 +269,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "aadbc14a-8ff4-4269-a6f5-f25f1a5f1b68",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fc519c370d874a1ab27c90612613317c",
+       "model_id": "e6b07f44240f4b628527c70e22e20f38",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: fc519c370d874a1ab27c90612613317c"
+       "A Jupyter widget with unique id: e6b07f44240f4b628527c70e22e20f38"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,22 +308,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "baebdee8-e33c-4e98-80ff-5cbc83c71284",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "06a1d088d0a7436b8019e0c564c9ee92",
+       "model_id": "472e23fc77d64bc39da40317f82b5ee1",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: 06a1d088d0a7436b8019e0c564c9ee92"
+       "A Jupyter widget with unique id: 472e23fc77d64bc39da40317f82b5ee1"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,12 +343,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "628074f733f74dae9b5482f2a9e7a2f1",
+       "model_id": "13ebb07acf1444bf9703b3bebbc1f0b0",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: 628074f733f74dae9b5482f2a9e7a2f1"
+       "A Jupyter widget with unique id: 13ebb07acf1444bf9703b3bebbc1f0b0"
       ]
      },
      "execution_count": 15,
@@ -381,22 +381,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "8926f7d1-faa5-47c6-aed4-fe7c37035b09",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9bae13906fda449aacc8056d66f0b97d",
+       "model_id": "daaece61dfcd4758b0ae19386cf5c122",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: 9bae13906fda449aacc8056d66f0b97d"
+       "A Jupyter widget with unique id: daaece61dfcd4758b0ae19386cf5c122"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "e26a5936-d0ee-474a-a733-7b8063b3a672",
    "metadata": {},
    "outputs": [],
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "536d598e-9894-4047-96fa-82ac14ded328",
    "metadata": {},
    "outputs": [],
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "id": "30bba7d3-0c09-4472-bf6f-1150b13535a1",
    "metadata": {},
    "outputs": [],
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "id": "c39b65dd-aa03-4281-a057-86d4f8b293b6",
    "metadata": {},
    "outputs": [],
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "id": "3f936744-df4a-44d0-ac13-b2614fb06960",
    "metadata": {},
    "outputs": [],
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 22,
    "id": "97fdc354-57d0-4e28-91e8-1d707fc24226",
    "metadata": {},
    "outputs": [],
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "id": "5d4cd76e-3a6b-4f4b-9bde-002acf0d126e",
    "metadata": {},
    "outputs": [],
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "id": "e25fa64a-e728-43ad-abfb-d8e385a62d73",
    "metadata": {},
    "outputs": [],
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 25,
    "id": "c2114ee8-485a-4757-a315-d8ecf36d9a33",
    "metadata": {},
    "outputs": [],
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 26,
    "id": "020e0c3e-81bc-4bcb-be8d-4febdf8b97ee",
    "metadata": {},
    "outputs": [],
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 27,
    "id": "e2ab99fc-8cf9-408e-b018-ff242afebb36",
    "metadata": {},
    "outputs": [],
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 28,
    "id": "093938dd-69f5-4506-993c-8dcc5ad492c3",
    "metadata": {},
    "outputs": [],
@@ -613,22 +613,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 29,
    "id": "71a54770-db87-4b69-abdd-9efba5accccf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "db6b0ea72b1146109a93458cba3862eb",
+       "model_id": "fa0991a1b1934d6a943d4fc87d51b3b2",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: db6b0ea72b1146109a93458cba3862eb"
+       "A Jupyter widget with unique id: fa0991a1b1934d6a943d4fc87d51b3b2"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,22 +641,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 30,
    "id": "e8d8626e-81b3-498e-851d-59d49c937c01",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9f0e6a7ba877462fb51fa3be17161ac5",
+       "model_id": "d1463d5ae5d04d7e8cd17f36e9da488d",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "A Jupyter widget with unique id: 9f0e6a7ba877462fb51fa3be17161ac5"
+       "A Jupyter widget with unique id: d1463d5ae5d04d7e8cd17f36e9da488d"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,10 +686,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "8b323dc0-61f8-43c1-ae8a-38027c04ff88",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Absolute Error: 0.204204\n",
+      "Mean Squared Error: 0.0744995\n",
+      "Root Mean Squared Error: 0.272946\n"
+     ]
+    }
+   ],
    "source": [
     "// Model evaluation metrics.\n",
     "\n",
