modified notebook to use xml model file

--- a/cifar10_cnn/cifar10_eval.ipynb
+++ b/cifar10_cnn/cifar10_eval.ipynb
@@ -85,33 +85,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "f2ec67c1-a8a1-40ce-b884-25d97a071d69",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[0;33m[WARN ] \u001b[0munrecognized XML syntax\n"
+     ]
+    }
+   ],
    "source": [
     "data::Load(\"model.xml\", \"model\", model);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "id": "c46e46cf-a4e3-4d1a-8a35-32e1116684ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "@0x7f1863fee150"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "b37b63e4-561a-4528-8db9-786336ff91cb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cout << \"Starting Prediction on testset ...\" << endl;\n",
     "mat testData, testY;\n",
-    "\n",
-    "mlpack::data::Load(\"./cifar-10_test.csv\", testData);\n",
+    "mlpack::data::Load(\"./cifar-10_test.csv\", testData, true);\n",
     "testData.shed_col(0);\n",
     "testY = testData.row(testData.n_rows - 1);\n",
-    "testData.shed_row(testData.n_rows - 1);\n",
-    "\n",
+    "testData.shed_row(testData.n_rows - 1);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b23865a-f8c4-4d91-b0d6-e883fe48dd50",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting Prediction on testset ...\n"
+     ]
+    }
+   ],
+   "source": [
+    "cout << \"Starting Prediction on testset ...\" << endl;\n",
     "mat testPredProbs;\n",
     "model.Predict(testData, testPredProbs);\n",
-    "arma::Row<size_t> testPreds = getLabels(testPredProbs);\n",
-    "double testAccuracy = arma::accu(testPreds == testY) / (double) testY.n_elem * 100;"
+    "// arma::Row<size_t> testPreds = getLabels(testPredProbs);\n",
+    "// double testAccuracy = arma::accu(testPreds == testY) / (double) testY.n_elem * 100;"
    ]
   },
   {
@@ -121,7 +165,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cout << \"Accuracy: test = \" << testAccuracy << \"%\" << endl;"
+    "cout << \"Accuracy on testset = \" << testAccuracy << \"%\" << endl;"
    ]
   }
  ],
