--- a/cifar10_cnn/cifar10_eval.ipynb
+++ b/cifar10_cnn/cifar10_eval.ipynb
@@ -130,7 +130,7 @@
    "outputs": [],
    "source": [
     "mat testData, testY;\n",
-    "mlpack::data::Load(\"./cifar-10_test.csv\", testData, true);\n",
+    "mlpack::data::Load(\"../data/cifar-10_test.csv\", testData, true);\n",
     "testData.shed_col(0);\n",
     "testY = testData.row(testData.n_rows - 1);\n",
     "testData.shed_row(testData.n_rows - 1);"
@@ -171,16 +171,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "C++14",
-   "language": "C++14",
-   "name": "xcpp14"
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": "text/x-c++src",
-   "file_extension": ".cpp",
-   "mimetype": "text/x-c++src",
-   "name": "c++",
-   "version": "14"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
